--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
+    "%load_ext jupyter_black\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "\n",
@@ -92,7 +93,9 @@
    "outputs": [],
    "source": [
     "def plot_trajectory(trajectory, color, label=None):\n",
-    "    plt.scatter(trajectory[:, 0], trajectory[:, 1], marker=\"o\", color=color, label=label)\n",
+    "    plt.scatter(\n",
+    "        trajectory[:, 0], trajectory[:, 1], marker=\"o\", color=color, label=label\n",
+    "    )\n",
     "    plt.plot(trajectory[:, 0], trajectory[:, 1], alpha=0.2, color=color)\n",
     "    plt.xlim(-5, 10)\n",
     "    plt.ylim(-5, 7)\n",
@@ -134,12 +137,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "L = 4\n",
+    "\n",
+    "\n",
     "def bounce_dsl():\n",
-    "    L = 4\n",
-    "    O = 4\n",
-    "    dslf = ns.DSLFactory(L=L, O=O, max_overall_depth=5)\n",
+    "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
     "    \"YOUR CODE HERE\"\n",
     "    dslf.prune_to(\"[$fL] -> [$fL]\")\n",
+    "    return dslf.finalize()\n",
+    "\n",
+    "\n",
+    "def predicate_dsl():\n",
+    "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
+    "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
+    "\n",
+    "    def add_projection(name, channel):\n",
+    "        dslf.parameterized(\n",
+    "            name,\n",
+    "            \"$fL -> {f, 1}\",\n",
+    "            lambda x, lin: lin(x[..., [channel]]),\n",
+    "            dict(lin=lambda: nn.Linear(1, 1)),\n",
+    "        )\n",
+    "\n",
+    "    for channel, name in enumerate([\"aff_x\", \"aff_y\", \"aff_vx\", \"aff_vy\"]):\n",
+    "        add_projection(name, channel)\n",
+    "    dslf.lambdas()\n",
+    "    dslf.prune_to(\"$fL -> {f, 1}\")\n",
     "    return dslf.finalize()"
    ]
   },
@@ -149,7 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dsl = bounce_dsl()"
+    "dsl = bounce_dsl()\n",
+    "dsl_p = predicate_dsl()"
    ]
   },
   {
@@ -171,6 +195,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dsl_p.render())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -179,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,37 +239,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neural_dsl = near.NeuralDSL.from_dsl(dsl, neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10))\n",
-    "g = near.validated_near_graph(\n",
-    "    neural_dsl,\n",
-    "    t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
-    "    is_goal=lambda x: True,\n",
-    "        cost=near.ValidationCost(\n",
-    "            trainer_cfg=near.NEARTrainerConfig(\n",
+    "filler = near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
+    "g = near.heirarchical_near_graph(\n",
+    "    high_level_dsl=dsl,\n",
+    "    symbol=\"linear_bool\",\n",
+    "    refined_dsl=dsl_p,\n",
+    "    typ=t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
+    "    # is_goal=lambda x: True,\n",
+    "    validation_cost_creator=lambda dsl, embedding: near.ValidationCost(\n",
+    "        trainer_cfg=near.NEARTrainerConfig(\n",
     "            lr=0.1,\n",
     "            n_epochs=100,\n",
     "            accelerator=\"cpu\",\n",
     "            loss_callback=nn.functional.mse_loss,\n",
     "        ),\n",
-    "            neural_dsl=neural_dsl,\n",
-    "            datamodule=datamodule,\n",
-    "           progress_by_epoch=True,\n",
-    "        ),\n",
+    "        neural_dsl=near.NeuralDSL.from_dsl(dsl, filler),\n",
+    "        datamodule=datamodule,\n",
+    "        progress_by_epoch=True,\n",
+    "        embedding=embedding,\n",
+    "    ),\n",
+    "    neural_hole_filler=filler,\n",
     "    validation_epochs=4000,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_programs = list(itertools.islice(ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 3))"
+    "dsl_merged = dsl.add_productions(*dsl_p.productions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def program_to_trajectory(best_program):\n",
+    "    T = 100\n",
+    "    path = np.zeros((T, 4))\n",
+    "    X = torch.tensor(\n",
+    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
+    "    )\n",
+    "    for t in range(T):\n",
+    "        path[t, :] = X.detach().numpy()\n",
+    "        Y = dsl_merged.compute(best_program)(X.unsqueeze(0)).squeeze(0)\n",
+    "        X = Y\n",
+    "    return path\n",
+    "\n",
+    "\n",
+    "def plot_programs(best_programs):\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "    plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
+    "    for i, (prog) in enumerate(best_programs):\n",
+    "        plot_trajectory(\n",
+    "            program_to_trajectory(prog),\n",
+    "            f\"C{i}\",\n",
+    "            label=ns.render_s_expression(prog.uninitialize()).replace(\"$\", r\"\\$\"),\n",
+    "        )\n",
+    "\n",
+    "    plt.title(\"Bouncing ball (ground truth in black)\")\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_programs = list(\n",
+    "    itertools.islice(\n",
+    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 5\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -257,30 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def program_to_trajectory(best_program):\n",
-    "    T = 100\n",
-    "    path = np.zeros((T, 4))\n",
-    "    X = torch.tensor(\n",
-    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
-    "    )\n",
-    "    for t in range(T):\n",
-    "        path[t, :] = X.detach().numpy()\n",
-    "        Y = best_program(X.unsqueeze(0), environment=[]).squeeze(0)\n",
-    "        X = Y\n",
-    "    return path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trajectories = [program_to_trajectory(prog) for prog in best_programs]"
+    "for prog in best_programs:\n",
+    "    print(ns.render_s_expression(prog.uninitialize()))"
    ]
   },
   {
@@ -292,20 +359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8, 8))\n",
-    "\n",
-    "plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
-    "for i, (trajectory, prog) in enumerate(zip(trajectories, best_programs)):\n",
-    "    plot_trajectory(trajectory, f\"C{i}\", label=ns.render_s_expression(prog.initalized_program.uninitialize()))\n",
-    "\n",
-    "plt.title(\"Bouncing ball (ground truth in black)\")\n",
-    "plt.legend()\n",
-    "plt.show()\n"
+    "plot_programs(best_programs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
