--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
+    "%load_ext jupyter_black\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "\n",
@@ -92,7 +93,9 @@
    "outputs": [],
    "source": [
     "def plot_trajectory(trajectory, color, label=None):\n",
-    "    plt.scatter(trajectory[:, 0], trajectory[:, 1], marker=\"o\", color=color, label=label)\n",
+    "    plt.scatter(\n",
+    "        trajectory[:, 0], trajectory[:, 1], marker=\"o\", color=color, label=label\n",
+    "    )\n",
     "    plt.plot(trajectory[:, 0], trajectory[:, 1], alpha=0.2, color=color)\n",
     "    plt.xlim(-5, 10)\n",
     "    plt.ylim(-5, 7)\n",
@@ -154,10 +157,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "L = 4\n",
+    "\n",
+    "\n",
     "def bounce_dsl():\n",
-    "    L = 4\n",
-    "    O = 4\n",
-    "    dslf = ns.DSLFactory(L=L, O=O, max_overall_depth=5)\n",
+    "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
     "    # BEGIN SOLUTION \"YOUR CODE HERE\"\n",
     "    ## DSL for the bounce example.\n",
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
@@ -172,9 +176,15 @@
     "        \"linear\", \"() -> $fL -> $fL\", lambda lin: lin, dict(lin=lambda: nn.Linear(L, L))\n",
     "    )\n",
     "\n",
-    "    dslf.concrete(\"ite\", \"(#a -> {f, 1}, #a -> #a, #a -> #a) -> #a -> #a\", near.operations.ite_torch)\n",
     "    dslf.concrete(\n",
-    "        \"map\", \"(#a -> #b) -> [#a] -> [#b]\", lambda f: lambda x: near.operations.map_torch(f, x)\n",
+    "        \"ite\",\n",
+    "        \"(#a -> {f, 1}, #a -> #a, #a -> #a) -> #a -> #a\",\n",
+    "        near.operations.ite_torch,\n",
+    "    )\n",
+    "    dslf.concrete(\n",
+    "        \"map\",\n",
+    "        \"(#a -> #b) -> [#a] -> [#b]\",\n",
+    "        lambda f: lambda x: near.operations.map_torch(f, x),\n",
     "    )\n",
     "    # END SOLUTION\n",
     "    dslf.prune_to(\"[$fL] -> [$fL]\")\n",
@@ -259,22 +269,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neural_dsl = near.NeuralDSL.from_dsl(dsl, neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10))\n",
+    "neural_dsl = near.NeuralDSL.from_dsl(\n",
+    "    dsl, neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
+    ")\n",
     "g = near.validated_near_graph(\n",
     "    neural_dsl,\n",
     "    t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
     "    is_goal=lambda x: True,\n",
-    "        cost=near.ValidationCost(\n",
-    "            trainer_cfg=near.NEARTrainerConfig(\n",
+    "    cost=near.ValidationCost(\n",
+    "        trainer_cfg=near.NEARTrainerConfig(\n",
     "            lr=0.1,\n",
     "            n_epochs=100,\n",
     "            accelerator=\"cpu\",\n",
     "            loss_callback=nn.functional.mse_loss,\n",
     "        ),\n",
-    "            neural_dsl=neural_dsl,\n",
-    "            datamodule=datamodule,\n",
-    "           progress_by_epoch=True,\n",
-    "        ),\n",
+    "        neural_dsl=neural_dsl,\n",
+    "        datamodule=datamodule,\n",
+    "        progress_by_epoch=True,\n",
+    "    ),\n",
     "    validation_epochs=4000,\n",
     ")"
    ]
@@ -315,23 +327,11 @@
     }
    ],
    "source": [
-    "best_programs = list(itertools.islice(ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Top 3 Programs\n",
-    "\n",
-    "The code below assumes you found some top 3 programs and stored them in the best_program_nodes variable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The function below is set up to further fine tune the program, test it, and return a set of values produced by it."
+    "best_programs = list(\n",
+    "    itertools.islice(\n",
+    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 3\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -340,7 +340,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def program_to_trajectory(best_program):\n",
+    "best_programs = [p.initalized_program for p in best_programs]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top 3 Programs\n",
+    "\n",
+    "Now, we show the top 3 programs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(map (ite (linear_bool) (linear) (linear)))\n",
+      "(map (ite (linear_bool) (linear) (ite (linear_bool) (linear) (linear))))\n",
+      "(map (ite (linear_bool) (linear) (ite (linear_bool) (linear) (ite (linear_bool) (linear) (linear)))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for prog in best_programs:\n",
+    "    print(ns.render_s_expression(prog.uninitialize()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting Trajectories\n",
+    "\n",
+    "We plot all the trajectories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def program_to_trajectory(dsl, best_program):\n",
     "    T = 100\n",
     "    path = np.zeros((T, 4))\n",
     "    X = torch.tensor(\n",
@@ -348,30 +395,30 @@
     "    )\n",
     "    for t in range(T):\n",
     "        path[t, :] = X.detach().numpy()\n",
-    "        Y = best_program(X.unsqueeze(0), environment=[]).squeeze(0)\n",
+    "        Y = dsl.compute(best_program)(X.unsqueeze(0)).squeeze(0)\n",
     "        X = Y\n",
-    "    return path"
+    "    return path\n",
+    "\n",
+    "\n",
+    "def plot_programs(dsl, best_programs):\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "    plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
+    "    for i, (prog) in enumerate(best_programs):\n",
+    "        plot_trajectory(\n",
+    "            program_to_trajectory(dsl, prog),\n",
+    "            f\"C{i}\",\n",
+    "            label=ns.render_s_expression(prog.uninitialize()).replace(\"$\", r\"\\$\"),\n",
+    "        )\n",
+    "\n",
+    "    plt.title(\"Bouncing ball (ground truth in black)\")\n",
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trajectories = [program_to_trajectory(prog) for prog in best_programs]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plotting Trajectories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -386,16 +433,15 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(8, 8))\n",
-    "\n",
-    "plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
-    "for i, (trajectory, prog) in enumerate(zip(trajectories, best_programs)):\n",
-    "    plot_trajectory(trajectory, f\"C{i}\", label=ns.render_s_expression(prog.initalized_program.uninitialize()))\n",
-    "\n",
-    "plt.title(\"Bouncing ball (ground truth in black)\")\n",
-    "plt.legend()\n",
-    "plt.show()\n"
+    "plot_programs(dsl, best_programs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
