--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -144,25 +144,6 @@
     "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
     "    \"YOUR CODE HERE\"\n",
     "    dslf.prune_to(\"[$fL] -> [$fL]\")\n",
-    "    return dslf.finalize()\n",
-    "\n",
-    "\n",
-    "def predicate_dsl():\n",
-    "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
-    "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
-    "\n",
-    "    def add_projection(name, channel):\n",
-    "        dslf.parameterized(\n",
-    "            name,\n",
-    "            \"$fL -> {f, 1}\",\n",
-    "            lambda x, lin: lin(x[..., [channel]]),\n",
-    "            dict(lin=lambda: nn.Linear(1, 1)),\n",
-    "        )\n",
-    "\n",
-    "    for channel, name in enumerate([\"aff_x\", \"aff_y\", \"aff_vx\", \"aff_vy\"]):\n",
-    "        add_projection(name, channel)\n",
-    "    dslf.lambdas()\n",
-    "    dslf.prune_to(\"$fL -> {f, 1}\")\n",
     "    return dslf.finalize()"
    ]
   },
@@ -172,8 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dsl = bounce_dsl()\n",
-    "dsl_p = predicate_dsl()"
+    "dsl = bounce_dsl()"
    ]
   },
   {
@@ -195,15 +175,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(dsl_p.render())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -212,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,31 +210,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filler = near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
-    "g = near.heirarchical_near_graph(\n",
-    "    high_level_dsl=dsl,\n",
-    "    symbol=\"linear_bool\",\n",
-    "    refined_dsl=dsl_p,\n",
-    "    typ=t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
-    "    # is_goal=lambda x: True,\n",
-    "    validation_cost_creator=lambda dsl, embedding: near.ValidationCost(\n",
+    "neural_dsl = near.NeuralDSL.from_dsl(\n",
+    "    dsl, neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
+    ")\n",
+    "g = near.validated_near_graph(\n",
+    "    neural_dsl,\n",
+    "    t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
+    "    is_goal=lambda x: True,\n",
+    "    cost=near.ValidationCost(\n",
     "        trainer_cfg=near.NEARTrainerConfig(\n",
     "            lr=0.1,\n",
     "            n_epochs=100,\n",
     "            accelerator=\"cpu\",\n",
     "            loss_callback=nn.functional.mse_loss,\n",
     "        ),\n",
-    "        neural_dsl=near.NeuralDSL.from_dsl(dsl, filler),\n",
+    "        neural_dsl=neural_dsl,\n",
     "        datamodule=datamodule,\n",
     "        progress_by_epoch=True,\n",
-    "        embedding=embedding,\n",
     "    ),\n",
-    "    neural_hole_filler=filler,\n",
     "    validation_epochs=4000,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_programs = list(\n",
+    "    itertools.islice(\n",
+    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 3\n",
+    "    )\n",
     ")"
    ]
   },
@@ -273,55 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dsl_merged = dsl.add_productions(*dsl_p.productions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def program_to_trajectory(best_program):\n",
-    "    T = 100\n",
-    "    path = np.zeros((T, 4))\n",
-    "    X = torch.tensor(\n",
-    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
-    "    )\n",
-    "    for t in range(T):\n",
-    "        path[t, :] = X.detach().numpy()\n",
-    "        Y = dsl_merged.compute(best_program)(X.unsqueeze(0)).squeeze(0)\n",
-    "        X = Y\n",
-    "    return path\n",
-    "\n",
-    "\n",
-    "def plot_programs(best_programs):\n",
-    "    plt.figure(figsize=(8, 8))\n",
-    "\n",
-    "    plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
-    "    for i, (prog) in enumerate(best_programs):\n",
-    "        plot_trajectory(\n",
-    "            program_to_trajectory(prog),\n",
-    "            f\"C{i}\",\n",
-    "            label=ns.render_s_expression(prog.uninitialize()).replace(\"$\", r\"\\$\"),\n",
-    "        )\n",
-    "\n",
-    "    plt.title(\"Bouncing ball (ground truth in black)\")\n",
-    "    plt.legend()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_programs = list(\n",
-    "    itertools.islice(\n",
-    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 5\n",
-    "    )\n",
-    ")"
+    "best_programs = [p.initalized_program for p in best_programs]"
    ]
   },
   {
@@ -330,19 +264,12 @@
    "source": [
     "### Top 3 Programs\n",
     "\n",
-    "The code below assumes you found some top 3 programs and stored them in the best_program_nodes variable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The function below is set up to further fine tune the program, test it, and return a set of values produced by it."
+    "Now, we show the top 3 programs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,16 +281,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting Trajectories"
+    "## Plotting Trajectories\n",
+    "\n",
+    "We plot all the trajectories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_programs(best_programs)"
+    "def program_to_trajectory(dsl, best_program):\n",
+    "    T = 100\n",
+    "    path = np.zeros((T, 4))\n",
+    "    X = torch.tensor(\n",
+    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
+    "    )\n",
+    "    for t in range(T):\n",
+    "        path[t, :] = X.detach().numpy()\n",
+    "        Y = dsl.compute(best_program)(X.unsqueeze(0)).squeeze(0)\n",
+    "        X = Y\n",
+    "    return path\n",
+    "\n",
+    "\n",
+    "def plot_programs(dsl, best_programs):\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "    plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
+    "    for i, (prog) in enumerate(best_programs):\n",
+    "        plot_trajectory(\n",
+    "            program_to_trajectory(dsl, prog),\n",
+    "            f\"C{i}\",\n",
+    "            label=ns.render_s_expression(prog.uninitialize()).replace(\"$\", r\"\\$\"),\n",
+    "        )\n",
+    "\n",
+    "    plt.title(\"Bouncing ball (ground truth in black)\")\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_programs(dsl, best_programs)"
    ]
   },
   {
