--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -347,42 +347,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def program_to_trajectory(best_program):\n",
-    "    T = 100\n",
-    "    path = np.zeros((T, 4))\n",
-    "    X = torch.tensor(\n",
-    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
-    "    )\n",
-    "    for t in range(T):\n",
-    "        path[t, :] = X.detach().numpy()\n",
-    "        Y = dsl_merged.compute(best_program)(X.unsqueeze(0)).squeeze(0)\n",
-    "        X = Y\n",
-    "    return path\n",
-    "\n",
-    "\n",
-    "def plot_programs(best_programs):\n",
-    "    plt.figure(figsize=(8, 8))\n",
-    "\n",
-    "    plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
-    "    for i, (prog) in enumerate(best_programs):\n",
-    "        plot_trajectory(\n",
-    "            program_to_trajectory(prog),\n",
-    "            f\"C{i}\",\n",
-    "            label=ns.render_s_expression(prog.uninitialize()).replace(\"$\", r\"\\$\"),\n",
-    "        )\n",
-    "\n",
-    "    plt.title(\"Bouncing ball (ground truth in black)\")\n",
-    "    plt.legend()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -519,19 +486,12 @@
    "source": [
     "### Top 3 Programs\n",
     "\n",
-    "The code below assumes you found some top 3 programs and stored them in the best_program_nodes variable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The function below is set up to further fine tune the program, test it, and return a set of values produced by it."
+    "Now, we show the top 3 programs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +515,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting Trajectories"
+    "## Plotting Trajectories\n",
+    "\n",
+    "We plot all the trajectories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def program_to_trajectory(dsl, best_program):\n",
+    "    T = 100\n",
+    "    path = np.zeros((T, 4))\n",
+    "    X = torch.tensor(\n",
+    "        np.array([0.21413583, 4.4062634, 3.4344807, 0.12440437]), dtype=torch.float32\n",
+    "    )\n",
+    "    for t in range(T):\n",
+    "        path[t, :] = X.detach().numpy()\n",
+    "        Y = dsl.compute(best_program)(X.unsqueeze(0)).squeeze(0)\n",
+    "        X = Y\n",
+    "    return path\n",
+    "\n",
+    "\n",
+    "def plot_programs(dsl, best_programs):\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "    plot_trajectory(datamodule.train.inputs[0], \"black\")\n",
+    "    for i, (prog) in enumerate(best_programs):\n",
+    "        plot_trajectory(\n",
+    "            program_to_trajectory(dsl, prog),\n",
+    "            f\"C{i}\",\n",
+    "            label=ns.render_s_expression(prog.uninitialize()).replace(\"$\", r\"\\$\"),\n",
+    "        )\n",
+    "\n",
+    "    plt.title(\"Bouncing ball (ground truth in black)\")\n",
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -575,7 +572,7 @@
     }
    ],
    "source": [
-    "plot_programs(best_programs)"
+    "plot_programs(dsl_merged, best_programs)"
    ]
   },
   {
