--- a/tutorial/near_demo_regression_interface_skeleton.ipynb
+++ b/tutorial/near_demo_regression_interface_skeleton.ipynb
@@ -362,9 +362,9 @@
     "\n",
     "    if ax is None:\n",
     "        plt.show()\n",
-    "module = best_programs[0]\n",
-    "print(ns.render_s_expression(module.uninitialize()))\n",
-    "plot_expression(module.uninitialize())"
+    "program = best_programs[0]\n",
+    "print(ns.render_s_expression(program.uninitialize()))\n",
+    "plot_expression(program.uninitialize())"
    ]
   },
   {
@@ -379,7 +379,7 @@
     "X = np.stack([xx, yy], axis=-1)\n",
     "X = X.reshape(-1, 2)    \n",
     "X = torch.tensor(X, dtype=torch.float32)\n",
-    "Y = module(X.unsqueeze(0), environment=()).squeeze(0)\n",
+    "Y = dsl.compute(program)(X.unsqueeze(0)).squeeze(0)\n",
     "Y = Y.detach().numpy()\n",
     "Y = Y.reshape(100, 100, 1)\n",
     "y = Y\n",
