--- a/tutorial/near_demo_classification.ipynb
+++ b/tutorial/near_demo_classification.ipynb
@@ -579,7 +579,7 @@
    "source": [
     "module, _ = validation_cost.validate_model(best_program[0])\n",
     "\n",
-    "lin = module.contained_modules[0]\n",
+    "lin = module.children[0].state[\"lin\"]\n",
     "\n",
     "grid = np.linspace(-3, 3, 100)\n",
     "xx, yy = np.meshgrid(grid, grid)\n",
