--- a/tutorial/near_demo_regression_skeleton.ipynb
+++ b/tutorial/near_demo_regression_skeleton.ipynb
@@ -334,9 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "max_depth = 7\n",
@@ -427,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module, _ = validation_cost.validate_model(best_program)\n",
+    "prog, _ = validation_cost.validate_model(best_program)\n",
     "\n",
     "grid = np.linspace(-3, 3, 100)\n",
     "xx, yy = np.meshgrid(grid, grid)\n",
@@ -435,7 +433,7 @@
     "X = np.stack([xx, yy], axis=-1)\n",
     "X = X.reshape(-1, 2)\n",
     "X = torch.tensor(X, dtype=torch.float32)\n",
-    "Y = module(X.unsqueeze(0), environment=()).squeeze(0)\n",
+    "Y = dsl.compute(prog)(X.unsqueeze(0)).squeeze(0)\n",
     "Y = Y.detach().numpy()\n",
     "Y = Y.reshape(100, 100, 1)\n",
     "y = Y\n",
@@ -462,13 +460,6 @@
     "### Exercise\n",
     "*Does the output heatmap line up with the trajectory data we visualized in part 1? Does the program and the heatmap line up with our initial hypotheses?*"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
