--- a/tutorial/near_demo_regression_solutions.ipynb
+++ b/tutorial/near_demo_regression_solutions.ipynb
@@ -574,7 +574,7 @@
     }
    ],
    "source": [
-    "prog, _ = validation_cost.validate_model(best_program)\n",
+    "best_program, _ = validation_cost.validate_model(best_program)\n",
     "\n",
     "grid = np.linspace(-3, 3, 100)\n",
     "xx, yy = np.meshgrid(grid, grid)\n",
@@ -582,7 +582,7 @@
     "X = np.stack([xx, yy], axis=-1)\n",
     "X = X.reshape(-1, 2)\n",
     "X = torch.tensor(X, dtype=torch.float32)\n",
-    "Y = dsl.compute(prog)(X.unsqueeze(0)).squeeze(0)\n",
+    "Y = dsl.compute(best_program)(X.unsqueeze(0)).squeeze(0)\n",
     "Y = Y.detach().numpy()\n",
     "Y = Y.reshape(100, 100, 1)\n",
     "y = Y\n",
@@ -592,7 +592,7 @@
     "plt.colorbar(label=\"Distance from origin\")\n",
     "plt.title(\n",
     "    \"Output heatmap\\n{program}\".format(\n",
-    "        program=ns.render_s_expression(best_program)\n",
+    "        program=ns.render_s_expression(best_program.uninitialize())\n",
     "    )\n",
     ")\n",
     "plt.xlabel(\"X-axis\")\n",
