fix many things, add default

--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -221,14 +221,13 @@
     "    neural_dsl,\n",
     "    t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
     "    is_goal=lambda x: True,\n",
-    "    cost=near.ValidationCost(\n",
+    "    cost=near.default_near_cost(\n",
     "        trainer_cfg=near.NEARTrainerConfig(\n",
     "            lr=0.1,\n",
     "            n_epochs=100,\n",
     "            accelerator=\"cpu\",\n",
     "            loss_callback=nn.functional.mse_loss,\n",
     "        ),\n",
-    "        neural_dsl=neural_dsl,\n",
     "        datamodule=datamodule,\n",
     "        progress_by_epoch=True,\n",
     "    ),\n",
