--- a/tutorial/near_demo_classification.ipynb
+++ b/tutorial/near_demo_classification.ipynb
@@ -430,9 +430,8 @@
     "    loss_callback=classification_cross_entropy_loss,\n",
     ")\n",
     "\n",
-    "validation_cost = near.ValidationCost(\n",
+    "validation_cost = near.default_near_cost(\n",
     "    trainer_cfg=trainer_cfg,\n",
-    "    neural_dsl=neural_dsl,\n",
     "    datamodule=datamodule,\n",
     ")"
    ]
