--- a/tutorial/near_demo_regression_skeleton.ipynb
+++ b/tutorial/near_demo_regression_skeleton.ipynb
@@ -323,9 +323,8 @@
     "    optimizer=torch.optim.Adam,\n",
     ")\n",
     "\n",
-    "validation_cost = near.ValidationCost(\n",
+    "validation_cost = near.default_near_cost(\n",
     "    trainer_cfg=trainer_cfg,\n",
-    "    neural_dsl=neural_dsl,\n",
     "    datamodule=datamodule,\n",
     "    progress_by_epoch=True,\n",
     ")"
