updates but no fixes

--- a/tutorial/near_demo_regression_interface_solutions.ipynb
+++ b/tutorial/near_demo_regression_interface_solutions.ipynb
@@ -383,9 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -401,10 +399,12 @@
       "Training (output (map (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (linear)))\n",
       "Validating (output (map (linear)))\n",
+      "Training (output (map (linear)))\n",
       "Training (map (sum))\n",
       "No parameters in program (map (sum))\n",
       "Training (map (linear_bool))\n",
       "Validating (map (linear_bool))\n",
+      "Training (map (linear_bool))\n",
       "Training (output (map (ite (sum) ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (linear_bool) ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (sum) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>) ??::<{f, 2} -> {f, 2}>)))\n",
@@ -412,11 +412,13 @@
       "Training (output (map (ite (sum) (linear) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>))))\n",
       "Training (output (map (ite (sum) (linear) (linear))))\n",
       "Validating (output (map (ite (sum) (linear) (linear))))\n",
+      "Training (output (map (ite (sum) (linear) (linear))))\n",
       "Training (output (map (ite (linear_bool) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>) ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (linear_bool) (linear) ??::<{f, 2} -> {f, 2}>)))\n",
       "Training (output (map (ite (linear_bool) (linear) (ite ??::<{f, 2} -> {f, 1}> ??::<{f, 2} -> {f, 2}> ??::<{f, 2} -> {f, 2}>))))\n",
       "Training (output (map (ite (linear_bool) (linear) (linear))))\n",
-      "Validating (output (map (ite (linear_bool) (linear) (linear))))\n"
+      "Validating (output (map (ite (linear_bool) (linear) (linear))))\n",
+      "Training (output (map (ite (linear_bool) (linear) (linear))))\n"
      ]
     }
    ],
