--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -270,33 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# filler = near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
-    "# g = near.heirarchical_near_graph(\n",
-    "#     high_level_dsl=dsl,\n",
-    "#     symbol=\"linear\",\n",
-    "#     refined_dsl=dsl_l,\n",
-    "#     typ=t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
-    "#     # is_goal=lambda x: True,\n",
-    "#     validation_cost_creator=lambda dsl, embedding: near.ValidationCost(\n",
-    "#         trainer_cfg=near.NEARTrainerConfig(\n",
-    "#             lr=0.1,\n",
-    "#             n_epochs=100,\n",
-    "#             accelerator=\"cpu\",\n",
-    "#             loss_callback=nn.functional.mse_loss,\n",
-    "#         ),\n",
-    "#         neural_dsl=near.NeuralDSL.from_dsl(dsl, filler),\n",
-    "#         datamodule=datamodule,\n",
-    "#         progress_by_epoch=True,\n",
-    "#         embedding=embedding,\n",
-    "#         structural_cost_weight=0.5,\n",
-    "#     ),\n",
-    "#     neural_hole_filler=filler,\n",
-    "#     validation_epochs=4000,\n",
-    "# )\n",
     "filler = near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
     "g = near.heirarchical_near_graph(\n",
     "    high_level_dsl=dsl,\n",
@@ -304,18 +283,19 @@
     "    refined_dsl=dsl_p,\n",
     "    typ=t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
     "    # is_goal=lambda x: True,\n",
-    "    validation_cost_creator=lambda dsl, embedding: near.ValidationCost(\n",
+    "    validation_cost_creator=lambda embedding, symbol_costs: near.default_near_cost(\n",
     "        trainer_cfg=near.NEARTrainerConfig(\n",
     "            lr=0.1,\n",
     "            n_epochs=100,\n",
     "            accelerator=\"cpu\",\n",
     "            loss_callback=nn.functional.mse_loss,\n",
     "        ),\n",
-    "        neural_dsl=near.NeuralDSL.from_dsl(dsl, filler),\n",
+    "        # neural_dsl=near.NeuralDSL.from_dsl(dsl, filler),\n",
     "        datamodule=datamodule,\n",
     "        progress_by_epoch=True,\n",
     "        embedding=embedding,\n",
-    "        structural_cost_weight=0.5,\n",
+    "        structural_cost_weight=0.2,\n",
+    "        symbol_costs=symbol_costs,\n",
     "    ),\n",
     "    neural_hole_filler=filler,\n",
     "    validation_epochs=4000,\n",
@@ -324,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -341,7 +321,7 @@
    "source": [
     "best_programs = list(\n",
     "    itertools.islice(\n",
-    "        ns.search.bounded_astar(g, ma\\x_depth=1000, max_iterations=10000), 5\n",
+    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 5\n",
     "    )\n",
     ")"
    ]
@@ -357,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,13 +397,6 @@
    "source": [
     "plot_programs(dsl_merged, best_programs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
