bouncing ball lambdas (#270)

--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -144,6 +144,55 @@
     "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
     "    \"YOUR CODE HERE\"\n",
     "    dslf.prune_to(\"[$fL] -> [$fL]\")\n",
+    "    return dslf.finalize()\n",
+    "\n",
+    "\n",
+    "def predicate_dsl():\n",
+    "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
+    "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
+    "\n",
+    "    def add_projection(name, channel):\n",
+    "        dslf.parameterized(\n",
+    "            name,\n",
+    "            \"$fL -> {f, 1}\",\n",
+    "            lambda x, lin: lin(x[..., [channel]]),\n",
+    "            dict(lin=lambda: nn.Linear(1, 1)),\n",
+    "        )\n",
+    "\n",
+    "    for channel, name in enumerate([\"aff_x\", \"aff_y\", \"aff_vx\", \"aff_vy\"]):\n",
+    "        add_projection(name, channel)\n",
+    "    dslf.lambdas()\n",
+    "    dslf.prune_to(\"$fL -> {f, 1}\")\n",
+    "    return dslf.finalize()\n",
+    "\n",
+    "\n",
+    "def linear_dsl():\n",
+    "    assert L == 4\n",
+    "    dslf = ns.DSLFactory(L=L, max_overall_depth=5)\n",
+    "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
+    "\n",
+    "    def add_projection(name, channel):\n",
+    "        dslf.parameterized(\n",
+    "            name,\n",
+    "            \"$fL -> {f, 1}\",\n",
+    "            lambda x, lin: lin(x[..., [channel]]),\n",
+    "            dict(lin=lambda: nn.Linear(1, 1)),\n",
+    "        )\n",
+    "\n",
+    "    for channel, name in enumerate([\"aff_x\", \"aff_y\", \"aff_vx\", \"aff_vy\"]):\n",
+    "        add_projection(name, channel)\n",
+    "    dslf.concrete(\n",
+    "        \"vec4\",\n",
+    "        \"({f, 1}, {f, 1}, {f, 1}, {f, 1}) -> $fL\",\n",
+    "        lambda a, b, c, d: torch.cat([a, b, c, d], axis=-1),\n",
+    "    )\n",
+    "    dslf.concrete(\n",
+    "        \"+\",\n",
+    "        \"({f, 1}, {f, 1}) -> {f, 1}\",\n",
+    "        lambda a, b: a + b,\n",
+    "    )\n",
+    "    dslf.lambdas()\n",
+    "    dslf.prune_to(\"$fL -> $fL\")\n",
     "    return dslf.finalize()"
    ]
   },
@@ -153,7 +202,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dsl = bounce_dsl()"
+    "dsl = bounce_dsl()\n",
+    "dsl_p = predicate_dsl()\n",
+    "dsl_l = linear_dsl()"
    ]
   },
   {
@@ -175,6 +226,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dsl_p.render())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -183,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,40 +270,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "neural_dsl = near.NeuralDSL.from_dsl(\n",
-    "    dsl, neural_hole_filler=near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
-    ")\n",
-    "g = near.validated_near_graph(\n",
-    "    neural_dsl,\n",
-    "    t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
-    "    is_goal=lambda x: True,\n",
-    "    cost=near.default_near_cost(\n",
+    "filler = near.GenericMLPRNNNeuralHoleFiller(hidden_size=10)\n",
+    "g = near.heirarchical_near_graph(\n",
+    "    high_level_dsl=dsl,\n",
+    "    symbol=\"linear_bool\",\n",
+    "    refined_dsl=dsl_p,\n",
+    "    typ=t(\"([{f, $L}]) -> [{f, $O}]\"),\n",
+    "    # is_goal=lambda x: True,\n",
+    "    validation_cost_creator=lambda embedding, symbol_costs: near.default_near_cost(\n",
     "        trainer_cfg=near.NEARTrainerConfig(\n",
     "            lr=0.1,\n",
     "            n_epochs=100,\n",
     "            accelerator=\"cpu\",\n",
     "            loss_callback=nn.functional.mse_loss,\n",
     "        ),\n",
+    "        # neural_dsl=near.NeuralDSL.from_dsl(dsl, filler),\n",
     "        datamodule=datamodule,\n",
     "        progress_by_epoch=True,\n",
+    "        embedding=embedding,\n",
+    "        structural_cost_weight=0.2,\n",
+    "        symbol_costs=symbol_costs,\n",
     "    ),\n",
+    "    neural_hole_filler=filler,\n",
     "    validation_epochs=4000,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "dsl_merged = dsl.add_productions(*dsl_p.productions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "best_programs = list(\n",
     "    itertools.islice(\n",
-    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 3\n",
+    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 5\n",
     "    )\n",
     ")"
    ]
@@ -259,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,19 +391,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_programs(dsl, best_programs)"
+    "plot_programs(dsl_merged, best_programs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
