add skip ahead test

--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -236,8 +236,8 @@
     "\n",
     "    for channel, name in enumerate([\"aff_x\", \"aff_y\", \"aff_vx\", \"aff_vy\"]):\n",
     "        add_projection(name, channel)\n",
-    "    dslf.concrete(\n",
     "        \"vec4\",\n",
+    "    dslf.concrete(\n",
     "        \"({f, 1}, {f, 1}, {f, 1}, {f, 1}) -> $fL\",\n",
     "        lambda a, b, c, d: torch.cat([a, b, c, d], axis=-1),\n",
     "    )\n",
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -412,6 +412,8 @@
      "output_type": "stream",
      "text": [
       "Training ??::<[{f, 4}] -> [{f, 4}]>\n",
+      "{Hole(id=4113, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,)))), env=Environment(_elements=frozendict.frozendict({})))): [SExpression(symbol='ite', children=(Hole(id=4114, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=TensorType(dtype=AtomicType(name='f'), shape=(1,))), env=Environment(_elements=frozendict.frozendict({})))), Hole(id=4115, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,)))), env=Environment(_elements=frozendict.frozendict({})))), Hole(id=4116, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,)))), env=Environment(_elements=frozendict.frozendict({})))))), SExpression(symbol='map', children=(Hole(id=4117, twe=TypeWithEnvironment(typ=ArrowType(input_type=(TensorType(dtype=AtomicType(name='f'), shape=(4,)),), output_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))), env=Environment(_elements=frozendict.frozendict({})))),))]}\n",
+      "{Hole(id=4114, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=TensorType(dtype=AtomicType(name='f'), shape=(1,))), env=Environment(_elements=frozendict.frozendict({})))): [SExpression(symbol='ite', children=(Hole(id=4118, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=TensorType(dtype=AtomicType(name='f'), shape=(1,))), env=Environment(_elements=frozendict.frozendict({})))), Hole(id=4119, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=TensorType(dtype=AtomicType(name='f'), shape=(1,))), env=Environment(_elements=frozendict.frozendict({})))), Hole(id=4120, twe=TypeWithEnvironment(typ=ArrowType(input_type=(ListType(element_type=TensorType(dtype=AtomicType(name='f'), shape=(4,))),), output_type=TensorType(dtype=AtomicType(name='f'), shape=(1,))), env=Environment(_elements=frozendict.frozendict({}))))))]}\n",
       "(ite ??::<[{f, 4}] -> {f, 1}> ??::<[{f, 4}] -> [{f, 4}]> ??::<[{f, 4}] -> [{f, 4}]>)\n",
       "(ite (ite ??::<[{f, 4}] -> {f, 1}> ??::<[{f, 4}] -> {f, 1}> ??::<[{f, 4}] -> {f, 1}>) ??::<[{f, 4}] -> [{f, 4}]> ??::<[{f, 4}] -> [{f, 4}]>)\n",
       "Unexpected exception formatting exception. Falling back to standard exception\n"
@@ -422,7 +424,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/home/kavi/mit/neurosym-lib/neurosym/search_graph/dsl_search_graph.py\", line 100, in _maximally_expanded_node\n",
+      "  File \"/home/kavi/mit/neurosym-lib/neurosym/search_graph/dsl_search_graph.py\", line 101, in _maximally_expanded_node\n",
       "    next(expansions)\n",
       "StopIteration\n",
       "\n",
@@ -454,7 +456,7 @@
       "  File \"/home/kavi/mit/neurosym-lib/neurosym/search_graph/dsl_search_graph.py\", line 65, in expand_node\n",
       "    yield self._maximally_expanded_node(expanded_node)\n",
       "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/kavi/mit/neurosym-lib/neurosym/search_graph/dsl_search_graph.py\", line 106, in _maximally_expanded_node\n",
+      "  File \"/home/kavi/mit/neurosym-lib/neurosym/search_graph/dsl_search_graph.py\", line 107, in _maximally_expanded_node\n",
       "    1/0\n",
       "    ~^~\n",
       "ZeroDivisionError: division by zero\n",
