extract discrete tutorial

--- a/tutorial/discrete_exercise_solutions.ipynb
+++ b/tutorial/discrete_exercise_solutions.ipynb
@@ -34,6 +34,7 @@
     "\n",
     "import itertools\n",
     "import neurosym as ns\n",
+    "from neurosym.examples import simple_dreamcoder\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -269,7 +270,7 @@
    "source": [
     "### Exercise 2: Finding a program\n",
     "\n",
-    "Finish the following function below, which, given a distribution, a list of inputs and a list of outputs, finds a program matching those inputs and outputs, within epsilon at all locations. It might be helpful to look at the `test_program` method above to see how to run programs. Important detail: you will want to handle errors and `nan` values gracefully. For this, we provide the `run_safely` function, that takes a function and input and runs it, returning `None` if its output is `nan` or an error."
+    "Finish the following function below, which, given a distribution, a list of inputs and a list of outputs, finds a program matching those inputs and outputs, within epsilon at all locations. It might be helpful to look at the `test_program` method above to see how to run programs. Important detail: you will want to handle errors and `nan` values gracefully. For this, we provide the `simple_dreamcoder.run_safely` function, that takes a function and input and runs it, returning `None` if its output is `nan` or an error."
    ]
   },
   {
@@ -278,21 +279,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_safely(f, x):\n",
-    "    try:\n",
-    "        y = f(x)\n",
-    "    except:\n",
-    "        return None\n",
-    "    if np.isnan(y):\n",
-    "        return None\n",
-    "    return y\n",
-    "\n",
     "def find_program(dist, inputs, outputs, epsilon):\n",
     "    # BEGIN SOLUTION \"YOUR CODE HERE\"\n",
     "    for prog, _ in dist_family.enumerate(dist):\n",
     "        actual_fn = dsl.compute(dsl.initialize(prog))\n",
     "        for i, o in zip(inputs, outputs):\n",
-    "            y = run_safely(actual_fn, i)\n",
+    "            y = simple_dreamcoder.run_safely(actual_fn, i)\n",
     "            if y is None or abs(y - o) > epsilon:\n",
     "                break\n",
     "        else:\n",
@@ -367,16 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_sequences = 1000\n",
-    "len_sequences = 100\n",
-    "xs = np.linspace(-10, 10, len_sequences)\n",
-    "slack = 30\n",
-    "stride = 5\n",
-    "values = np.random.RandomState(1).rand(num_sequences, len_sequences + slack) * 4 - 2\n",
-    "values = np.mean([values[:, i:i + len_sequences] for i in range(slack)], axis=0)\n",
-    "values *= np.sqrt(slack)\n",
-    "values = values[:, ::stride]\n",
-    "xs = xs[::stride]\n",
+    "xs, values = simple_dreamcoder.example_dataset(1000, 20, seed=1, slack=30, stride=5)\n",
     "\n",
     "plot_count = 3\n",
     "\n",
@@ -419,37 +402,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_all_programs(dsl, programs):\n",
-    "    filtered_programs, evaluations = [], []\n",
-    "    for prog in programs:\n",
-    "        try:\n",
-    "            actual_fn = dsl.compute(dsl.initialize(prog))\n",
-    "        except:\n",
-    "            continue\n",
-    "        ys = []\n",
-    "        for inp in xs:\n",
-    "            y = run_safely(actual_fn, inp)\n",
-    "            if y is None or not (-2 <= y <= 2):\n",
-    "                break\n",
-    "            ys.append(y)\n",
-    "        else:\n",
-    "            filtered_programs.append(prog)\n",
-    "            evaluations.append(ys)\n",
-    "    return filtered_programs, np.array(evaluations)\n",
-    "\n",
     "def best_fits(dsl, family, dist):\n",
-    "    programs = [prog for prog, _ in itertools.islice(family.enumerate(dist), 5000)]\n",
-    "    programs = sorted(programs, key=lambda x: len(ns.render_s_expression(x)))\n",
-    "    filtered_programs, ys = evaluate_all_programs(dsl, programs)\n",
-    "    errors = ((ys[None] - values[:,None]) ** 2).sum(-1)\n",
-    "    program_idxs = errors.argmin(1)\n",
-    "    print(\"Mean error: \", errors.min(1).mean())\n",
-    "    return [filtered_programs[i] for i in program_idxs]\n",
+    "    mean_err, programs = simple_dreamcoder.best_fits(xs, values, dsl, family, dist, count=5000)\n",
+    "    print(\"Mean error: \", mean_err)\n",
+    "    return programs\n",
     "\n",
     "def plot_programs_against_data(dsl, best_programs):\n",
     "    plot_some_sequences()\n",
     "    best_programs = best_programs[:plot_count]\n",
-    "    _, evals = evaluate_all_programs(dsl, best_programs)\n",
+    "    _, evals = simple_dreamcoder.evaluate_all_programs(xs, dsl, best_programs)\n",
     "    for prog, ev in zip(best_programs, evals):\n",
     "        plt.plot(xs, ev, label=ns.render_s_expression(prog).replace(\"$\", r\"\\$\"))\n",
     "    plt.legend()"
@@ -896,6 +857,13 @@
     "    print(ns.s_exp_to_python(x))\n",
     "    print(\"*\" * 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
