clean up, add documentation

--- a/tutorial/discrete_exercise_solutions.ipynb
+++ b/tutorial/discrete_exercise_solutions.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
    "outputs": [],
    "source": [
     "def best_fits(dsl, family, dist):\n",
-    "    mean_err, programs = simple_dreamcoder.best_fits(xs, values, dsl, family, dist, count=5000)\n",
+    "    mean_err, programs = simple_dreamcoder.compute_best_fits_for_each(xs, values, dsl, family, dist, count=5000)\n",
     "    print(\"Mean error: \", mean_err)\n",
     "    return programs\n",
     "\n",
