parameterized/concrete -> production

--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -152,7 +152,7 @@
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
     "\n",
     "    def add_projection(name, channel):\n",
-    "        dslf.parameterized(\n",
+    "        dslf.production(\n",
     "            name,\n",
     "            \"$fL -> {f, 1}\",\n",
     "            lambda x, lin: lin(x[..., [channel]]),\n",
@@ -172,7 +172,7 @@
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
     "\n",
     "    def add_projection(name, channel):\n",
-    "        dslf.parameterized(\n",
+    "        dslf.production(\n",
     "            name,\n",
     "            \"$fL -> {f, 1}\",\n",
     "            lambda x, lin: lin(x[..., [channel]]),\n",
@@ -181,12 +181,12 @@
     "\n",
     "    for channel, name in enumerate([\"aff_x\", \"aff_y\", \"aff_vx\", \"aff_vy\"]):\n",
     "        add_projection(name, channel)\n",
-    "    dslf.concrete(\n",
+    "    dslf.production(\n",
     "        \"vec4\",\n",
     "        \"({f, 1}, {f, 1}, {f, 1}, {f, 1}) -> $fL\",\n",
     "        lambda a, b, c, d: torch.cat([a, b, c, d], axis=-1),\n",
     "    )\n",
-    "    dslf.concrete(\n",
+    "    dslf.production(\n",
     "        \"+\",\n",
     "        \"({f, 1}, {f, 1}) -> {f, 1}\",\n",
     "        lambda a, b: a + b,\n",
