--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -166,22 +166,22 @@
     "    ## DSL for the bounce example.\n",
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
     "\n",
-    "    dslf.parameterized(\n",
+    "    dslf.production(\n",
     "        \"linear_bool\",\n",
     "        \"() -> $fL -> {f, 1}\",\n",
     "        lambda lin: lin,\n",
     "        dict(lin=lambda: nn.Linear(L, 1)),\n",
     "    )\n",
-    "    dslf.parameterized(\n",
+    "    dslf.production(\n",
     "        \"linear\", \"() -> $fL -> $fL\", lambda lin: lin, dict(lin=lambda: nn.Linear(L, L))\n",
     "    )\n",
     "\n",
-    "    dslf.concrete(\n",
+    "    dslf.production(\n",
     "        \"ite\",\n",
     "        \"(#a -> {f, 1}, #a -> #a, #a -> #a) -> #a -> #a\",\n",
     "        near.operations.ite_torch,\n",
     "    )\n",
-    "    dslf.concrete(\n",
+    "    dslf.production(\n",
     "        \"map\",\n",
     "        \"(#a -> #b) -> [#a] -> [#b]\",\n",
     "        lambda f: lambda x: near.operations.map_torch(f, x),\n",
@@ -196,7 +196,7 @@
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
     "\n",
     "    def add_projection(name, channel):\n",
-    "        dslf.parameterized(\n",
+    "        dslf.production(\n",
     "            name,\n",
     "            \"$fL -> {f, 1}\",\n",
     "            lambda x, lin: lin(x[..., [channel]]),\n",
@@ -216,7 +216,7 @@
     "    dslf.typedef(\"fL\", \"{f, $L}\")\n",
     "\n",
     "    def add_projection(name, channel):\n",
-    "        dslf.parameterized(\n",
+    "        dslf.production(\n",
     "            name,\n",
     "            \"$fL -> {f, 1}\",\n",
     "            lambda x, lin: lin(x[..., [channel]]),\n",
@@ -225,12 +225,12 @@
     "\n",
     "    for channel, name in enumerate([\"aff_x\", \"aff_y\", \"aff_vx\", \"aff_vy\"]):\n",
     "        add_projection(name, channel)\n",
-    "    dslf.concrete(\n",
+    "    dslf.production(\n",
     "        \"vec4\",\n",
     "        \"({f, 1}, {f, 1}, {f, 1}, {f, 1}) -> $fL\",\n",
     "        lambda a, b, c, d: torch.cat([a, b, c, d], axis=-1),\n",
     "    )\n",
-    "    dslf.concrete(\n",
+    "    dslf.production(\n",
     "        \"+\",\n",
     "        \"({f, 1}, {f, 1}) -> {f, 1}\",\n",
     "        lambda a, b: a + b,\n",
