--- a/tutorial/discrete_exercise_skeleton.ipynb
+++ b/tutorial/discrete_exercise_skeleton.ipynb
@@ -71,10 +71,10 @@
    "source": [
     "dslf = ns.DSLFactory()\n",
     "dslf.production(\"0\", \"() -> f\", lambda: 0)\n",
-    "dslf.productionon(\"1\", \"() -> f\", lambda: 1)\n",
-    "dslf.productionon(\"2\", \"() -> f\", lambda: 2)\n",
-    "dslf.productionon(\"+\", \"(f, f) -> f\", lambda x, y: x + y)\n",
-    "dslf.productionon(\"-\", \"(f, f) -> f\", lambda x, y: x - y)\n",
+    "dslf.production(\"1\", \"() -> f\", lambda: 1)\n",
+    "dslf.production(\"2\", \"() -> f\", lambda: 2)\n",
+    "dslf.production(\"+\", \"(f, f) -> f\", lambda x, y: x + y)\n",
+    "dslf.production(\"-\", \"(f, f) -> f\", lambda x, y: x - y)\n",
     "\"YOUR CODE HERE\"\n",
     "dslf.lambdas()\n",
     "dslf.prune_to(\"f -> f\")\n",
